<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.fenji.MainActivity">

    <LinearLayout

        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_height"
            android:scaleType="centerCrop"
            android:src="@drawable/fenji" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                style="@style/business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business" />

            <TextView
                style="@style/business_subname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beschrijving" />

            <RatingBar
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.5" />
        </LinearLayout>


        <LinearLayout
            style="@style/layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/location" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:autoLink="map"
                    android:onClick="openMaps"
                    android:text="@string/address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/wereld" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:autoLink="web"
                    android:text="@string/url" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/tele" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:autoLink="phone"
                    android:text="@string/telephone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/klok" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:text="@string/hours" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:autoLink="email"
                    android:text="@string/email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/info_item_margin">

                <ImageView
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginLeft="@dimen/info_item_margin_left"
                    android:src="@drawable/pen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/info_item_margin"
                    android:text="@string/description" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>
